--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,8 +8,17 @@ http {
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
-        location /appui {
-            try_files $uri /index.html;
+        location / {
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
+          try_files $uri $uri/ /index.html;
+        }
+
+        error_page  404              /404.html;
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
     }
 }
